public/stylesheets/landing.css
html {
  min-height: 100%;
}
body {
  background-color: #203050;
  color: #fff;
  background: linear-gradient(to bottom right, rgba(10, 100, 255, 1), rgba(10,10,125,1));
  background-size: cover;
  background-repeat: no-repeat;
  padding: 80px 0 20px 0;
}
h1 {
  margin: 0;
}
p, h2, label, .username-rules {
  text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
}
.glyphicon {
  margin-right: 10px;
}
.navbar {
  background-color: rgb(10,10,125);
  border: none;
  box-shadow: 0 0 5px 2px rgba(0,0,0,0.5);
  padding: 4px 0;
}
.nav-container {
  padding: 0 30px;
}
.navbar-inverse .navbar-nav > li > .nav-link, .navbar-inverse .navbar-brand {
  color: white;
}
.navbar-brand {
  font-size: inherit;
}
.action-item {
  text-align: left;
  font-size: 1.6em;
}
.login-container {
  display: table;
  height: 50px;
  float: right;
}
.login-form {
  display: table-cell;
  vertical-align: middle;
}
.login-input {
  display: inline;
  width: auto;
}
.btn-login {
  background-color: #1090FF;
  color: #eee;
  vertical-align: baseline;
  font-weight: bold;
}
.btn-login:hover {
  background-color: #1070cc;
  color: #eee;
}
.username-container {
  margin-bottom: 5px;
}
.center {
  text-align: center;
}
.username-rules {
  margin-bottom: 15px;
}
.password-group {
  text-align: left;
}
.show-password-lbl {
  margin-top: 5px;
}
.valid {
  border: 1px solid #10BB50;
}
.valid:focus {
  border-color: #10BB50;
}
.invalid {
  border: 1px solid #ee0033;
}
.invalid:focus {
  border-color: #ee0033;
}
.valid-msg {
  background-color: #10BB50;
}
.invalid-msg {
  background-color: #ee0033;
}
.no-display {
  display: none;
}
.hidden {
  visibility: hidden;
}
.validation-msg {
  float: right;
  font-weight: bold;
  padding: 0 12px;
  border-radius: 30px;
}
.btn-register {
  background-color: #10BB50;
  color: #eee;
  font-weight: bold;
  border: none;
}
.btn-register:hover {
  color: #eee;
  background-color: #10AA50;
}
.buttons-between {
  margin: 10px 0;
}
.recovery-container {
  margin-left: 6px;
}
.recover-pw {
  color: white;
}
.recover-pw:hover {
  color: white;
}
.invalid-email-msg {
  margin-bottom: 5px;
  padding: 6px 12px;
  background-color: #ee0033;
}

@media (max-width: 860px){
  .recovery-container {
    display: block;
    margin-top: 4px;
    margin-left: 0;
  }
}

@media (max-width: 767px){
  body {
    padding: 60px 0;
  }
  .action-item {
    font-size: 1.2em;
  }
  .action-item:last-of-type {
    margin-bottom: 20px;
  }
  .login-container {
    width: 100%;
  }
  .login-input {
    width: 100%;
    margin-bottom: 6px;
  }
  .register-container {
    background-color: rgba(255,255,255,0.2);
    border-radius: 5px;
    padding: 1px 20px 20px 20px;
  }
  .recovery-container {
    margin: 10px 0;
  }
}

